tdf#169072 ms export: valid date years are 1601 - 9999

The dates in core.xml must fall in the range of 1601 - 9999.

This applies to all docx files,
and ECMA_376_1ST_EDITION (2007) versions of the other formats.

No existing unit tests had ANY dates outside of that range.

make CppunitTest_sw_ooxmlexport21 \
    CPPUNIT_TEST_NAME=testTdf169072_illegalDates

Change-Id: Ic2c81d13a1a8ed9d2ce29f7fea761900aa2f2d20
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193552
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193607
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>