oox/source/core/xmlfilterbase.cxx
@@ -566,6 +566,23 @@ OUString XmlFilterBase::addRelation( const Reference< XOutputStream >& rOutputSt
     return OUString();
 }
 
+static bool lcl_isValidDate(const util::DateTime& rTime, XmlFilterBase& rSelf)
+{
+    if (rTime.Year == 0)
+        return false;
+
+    // MS Office reports document as corrupt if core.xml contains any Year <= 1600 or > 9999
+    // for the "package" URI (ECMA_376_1ST_EDITION or docx).
+    if (rTime.Year > 1600  && rTime.Year < 10000)
+        return true;
+
+    const bool bDocx = dynamic_cast<text::XTextDocument*>(rSelf.getModel().get());
+    if (bDocx || rSelf.getVersion() == oox::core::ECMA_376_1ST_EDITION)
+        return false;
+
+    return true;
+}
+
 static void
 writeElement( const FSHelperPtr& pDoc, sal_Int32 nXmlElement, std::u16string_view sValue )
 {
@@ -690,7 +707,9 @@ writeCoreProperties( XmlFilterBase& rSelf, const Reference< XDocumentProperties 
     }
     if (!bRemoveUserInfo)
     {
-        writeElement(pCoreProps, FSNS(XML_dcterms, XML_created), xProperties->getCreationDate());
+        const util::DateTime aCreateDate = xProperties->getCreationDate();
+        if (lcl_isValidDate(aCreateDate, rSelf))
+            writeElement(pCoreProps, FSNS(XML_dcterms, XML_created), aCreateDate);
         writeElement(pCoreProps, FSNS(XML_dc, XML_creator), xProperties->getAuthor());
     }
     writeElement( pCoreProps, FSNS( XML_dc, XML_description ),      xProperties->getDescription() );
@@ -708,9 +727,13 @@ writeCoreProperties( XmlFilterBase& rSelf, const Reference< XDocumentProperties 
     if (!bRemoveUserInfo)
     {
         writeElement(pCoreProps, FSNS(XML_cp, XML_lastModifiedBy), xProperties->getModifiedBy());
-        writeElement(pCoreProps, FSNS(XML_cp, XML_lastPrinted), xProperties->getPrintDate());
-        writeElement(pCoreProps, FSNS(XML_dcterms, XML_modified),
-                     xProperties->getModificationDate());
+        const util::DateTime aPrintDate = xProperties->getPrintDate();
+        if (lcl_isValidDate(aPrintDate, rSelf))
+            writeElement(pCoreProps, FSNS(XML_cp, XML_lastPrinted), aPrintDate);
+
+        const util::DateTime aModifyDate = xProperties->getModificationDate();
+        if (lcl_isValidDate(aModifyDate, rSelf))
+            writeElement(pCoreProps, FSNS(XML_dcterms, XML_modified), aModifyDate);
     }
     if (!bRemovePersonalInfo)
     {
